Jar finalizado com conexão via banco

--- a/Java/conexao-banco-jar/pom.xml
+++ b/Java/conexao-banco-jar/pom.xml
@@ -7,6 +7,16 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.0.5.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.32</version>
@@ -34,7 +44,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>sptech.testejar.ConexaoJar</mainClass> 
+                            <mainClass>sptech.testejar.TesteConexao</mainClass> 
                         </manifest>
                     </archive>
                 </configuration>
